[gd_scene load_steps=3 format=3 uid="uid://bgdvmgdg4qrat"]

[ext_resource type="Script" uid="uid://c284kl2tvqt65" path="res://scenes/game_over.gd" id="1_wqhvx"]
[ext_resource type="FontFile" uid="uid://cmpp6hfy6duhm" path="res://assets/font/ThaleahFat.ttf" id="1_xeevv"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqhvx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -105.0
offset_right = 215.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 100
text = "Game Over"

[node name="MenuButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = 76.0
offset_right = -22.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 50
text = "MENU"

[node name="RestartButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 76.0
offset_right = 262.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 50
text = "RESTART"

[connection signal="pressed" from="ColorRect/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/RestartButton" to="." method="_on_restart_button_pressed"]
